objects/Suppliers__c/fields/Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Province__c</fullName>
    <label>Billing State/Province</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>