objects/Suppliers__c/fields/Billing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Postal_Code__c</fullName>
    <label>Billing Zip/Postal Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>