objects/Suppliers__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>