objects/Suppliers__c/fields/Contact_Name_From_Sage__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_From_Sage__c</fullName>
    <label>Contact Name (From Sage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>