objects/Suppliers__c/fields/Parts_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Parts_Ordered__c</fullName>
    <label>Parts Ordered</label>
    <length>80</length>
    <type>Text</type>
</CustomField>