objects/Suppliers__c/fields/Sage_Code__c.field-meta.xml
<CustomField>
    <fullName>Sage_Code__c</fullName>
    <label>Sage Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>