objects/Suppliers__c/fields/Supplier_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account_Number__c</fullName>
    <label>Supplier Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>