objects/Suppliers__c/fields/Telephone_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Number_2__c</fullName>
    <label>Telephone Number 2</label>
    <type>Phone</type>
</CustomField>