objects/Suppliers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Billing_Street__c</columns>
    <columns>Billing_City__c</columns>
    <columns>Billing_State_Province__c</columns>
    <columns>Billing_Zip_Postal_Code__c</columns>
    <columns>Billing_Country__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Contact_Name_From_Sage__c</columns>
    <columns>Fax_Number__c</columns>
    <columns>Sage_Code__c</columns>
    <columns>Telephone_Number__c</columns>
    <columns>Telephone_Number_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>